syntax = "proto3";

package matchmaking;

option go_package = "gen/matchmakingpb";

// ==================== Messages ====================

message JoinQueueRequest {
  string player_id = 1;
  string game_mode = 2;
  string region = 3;
}

message JoinQueueResponse {
  bool success = 1;
  string message = 2;
  int32 queue_position = 3;
}

message LeaveQueueRequest {
  string player_id = 1;
}

message LeaveQueueResponse {
  bool success = 1;
  string message = 2;
}

message GetQueueStatusRequest {
  string player_id = 1;
}

message QueueStatus {
  string player_id = 1;
  int32 position = 2;
  int32 estimated_wait_seconds = 3;
  string status = 4; // "queued", "matching", "matched"
  bool in_queue = 5;
}

message GetQueueStatusResponse {
  QueueStatus status = 1;
}

message PlayerInfo {
  string player_id = 1;
  string name = 2;
  int32 skill_rank = 3;
}

message MatchInfo {
  string match_id = 1;
  repeated PlayerInfo players = 2;
  string game_mode = 3;
  string region = 4;
  string session_token = 5;
  int64 created_at = 6;
}

message CancelMatchRequest {
  string player_id = 1;
  string match_id = 2;
}

message CancelMatchResponse {
  bool success = 1;
  string message = 2;
}

message GetMatchHistoryRequest {
  string player_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetMatchHistoryResponse {
  repeated MatchInfo matches = 1;
  int32 total_count = 2;
}

// ==================== Service ====================

service MatchmakingService {
  rpc JoinQueue(JoinQueueRequest) returns (JoinQueueResponse);
  rpc LeaveQueue(LeaveQueueRequest) returns (LeaveQueueResponse);
  rpc GetQueueStatus(GetQueueStatusRequest) returns (GetQueueStatusResponse);
  rpc CancelMatch(CancelMatchRequest) returns (CancelMatchResponse);
  rpc GetMatchHistory(GetMatchHistoryRequest) returns (GetMatchHistoryResponse);
}
